--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.2.4",
     "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "date-fns": "^4.1.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
